# kordoc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README-EN.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
bench/: collect-opengov.mjs  formats-sweep.mjs  roundtrip.mjs  score.mjs  verify-reflow.mjs
demo/: package-lock.json
docs/: biff8-spec.md  format-profile-spec.md  gongmunseo-engine-spec.md
rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
rust/scripts/: build-wasm.sh
rust/src/: lib.rs
rust/src/hwp/: ole.rs  parser.rs  record.rs
rust/src/hwpx/: mod.rs  parser.rs
rust/tests/: smoke.rs
scripts/: convert-johab-map.mjs  debug-hwp3-stream.mjs  style-digest.mjs
src/: canvas.d.ts  chunks.ts  cli.ts  detect.ts  index.ts  mcp.ts  redact.ts  setup.ts  types.ts  utils.ts  validate.ts  watch.ts
tests/: chunks-core.test.ts  cli-options.test.ts  crypto.test.ts  dedupe-running-headers.test.ts  docx.test.ts  equation.test.ts  filler-hwpx.test.ts  flatten-nested-table.test.ts  formats-regression.test.ts  gongmun-docframe.test.ts  gongmun-lint.test.ts  gongmun.test.ts  hwpx-equation-generation.test.ts  hwpx-equation.test.ts  hwpx-format-profile.test.ts  hwpx-html-table.test.ts  hwpx-v3.test.ts  image-recovery.test.ts  image-transcode.test.ts  inline-table-order.test.ts  line-extract.test.ts  optional-pdfjs.test.ts  print.test.ts  record.test.ts  redact-core.test.ts  redact-e2e.test.ts  regress-binary-c.test.ts  regress-form-e.test.ts  regress-hwpx-a.test.ts  regress-issue-47.test.ts  regress-office-d.test.ts  regress-pdf-b.test.ts  regress-surface-f.test.ts  release-metadata.test.ts  render-mcp.test.ts  render.test.ts  roundtrip-empty-cell-ws.test.ts  security.test.ts  table-builder.test.ts  validate.test.ts  (+2 more)
(+104 files in other folders)
