[package]
name = "kordoc-rust"
version = "0.1.0"
edition = "2021"
description = "Rust HWP/HWPX parser backend for kordoc (WASM-first, opt-in)"
license = "MIT"
repository = "https://github.com/chrisryugj/kordoc"
rust-version = "1.70"
publish = false

# Parsers adapted from mdm-core (github.com/seunghan91/markdown-media, MIT),
# trimmed to HWP + HWPX only and given a byte-slice public API for WASM.
# See README.md / CONTRIBUTING.md for the integration plan.

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable wasm-bindgen glue. Build with:
#   wasm-pack build --target web --release --features wasm
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
# HWP (CFB/OLE container + zlib-compressed streams)
cfb = "0.12"
flate2 = "1.0"
miniz_oxide = "0.8"

# HWPX (ZIP + XML)
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# Text decoding (HWP stores some legacy strings in EUC-KR)
encoding_rs = "0.8"

# Shared
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optional WASM glue
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
